# cdp-sdk

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  openapi.yaml
python/: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  client_config.yaml  conftest.py  pyproject.toml
python/cdp/: __init__.py  analytics.py  api_clients.py  cdp_client.py  constants.py  evm_client.py  evm_local_account.py  evm_server_account.py  evm_smart_account.py  policies_client.py  solana_account.py  solana_client.py  utils.py
python/cdp/auth/: README.md  __init__.py
python/cdp/examples/: README.md  create_evm_account.py  create_evm_account_idempotency.py  create_server_smart_wallet_and_send.py  create_smart_wallet_and_send.py  create_sol_account.py  send_evm_tx.py  send_sol_tx.py
python/cdp/openapi_client/: __init__.py  cdp_api_client.py  configuration.py  errors.py  exceptions.py  rest.py
python/changelog.d/: 105.feature.md  114.feature.md  132.feature.md  135.feature.md  136.feature.md  137.feature.md  145.feature.md  146.feature.md  151.misc.md  156.feature.md  157.feature.md  162.feature.md  166.feature.md  30.feature.md  43.bugfix.md  55.feature.md  58.feature.md  75.feature.md  82.bugfix.md  86.feature.md  95.feature.md  98.feature.md
python/docs/: cdp.auth.clients.rst  cdp.auth.clients.urllib3.rst  cdp.auth.rst  cdp.auth.test.factories.rst  cdp.auth.test.rst  cdp.auth.utils.rst  cdp.openapi_client.api.rst  cdp.openapi_client.models.rst  cdp.openapi_client.rst  cdp.openapi_client.test.rst  cdp.rst  conf.py  index.rst
python/templates/: __init__package.mustache
(+435 files in other folders)
